Fix Flexbox basis and overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,32 @@
 /* } */
 
 body {
-  overscroll-behavior-y: none;
+  overscroll-behavior: none;
 }
 
+/* html, body, #root, .App { */
+  /* margin: 0; */
+  /* width: 100%; */
+  /* height: 100%; */
+/* } */
+
 .App {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(85%, 85%, 85%);
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(85%, 85%, 85%);
 }
 
 #top-panel {
-  flex: 0;
+  flex: 0 0;
 }
 
 #bottom-panel {
-  flex: 1;
+  flex: 1 1;
   display: flex;
   flex-direction: row;
 }
@@ -30,11 +36,11 @@ body {
 #left-panel {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  flex: 1 1;
 }
 
 #right-panel {
-  flex: 3;
+  flex: 3 3;
   display: flex;
   flex-direction: column;
 }
@@ -42,7 +48,8 @@ body {
 h1 {
   font-weight: normal;
   font-size: 14pt;
-  margin: 0;
+  /* margin: 0; */
+  margin: 5px 10px 5px 10px;
   margin-bottom: 5px;
   font-variant: small-caps;
   color: #888888;
@@ -51,13 +58,13 @@ h1 {
 #top-bottom-separator, #evaluator-memory-separator, #program-console-separator {
   height: 10px;
   min-height: 10px;
-  flex: 0;
+  flex: 0 0;
 }
 
 #left-right-separator, #stack-heap-separator {
   width: 10px;
   min-width: 10px;
-  flex: 0;
+  flex: 0 0;
 }
 
 #message {
@@ -65,9 +72,16 @@ h1 {
 }
 
 #program {
+  padding: 0 10px;
+  /* display: none; */
+  /* min-height: 0; */
+  /* height: 100%; */
+  /* transform: translateX(-5px); */
   font-size: 18pt;
   overflow: auto;
   white-space: nowrap;
+  flex: 1 1;
+  flex-basis: 0;
 }
 
 #console {
@@ -75,7 +89,7 @@ h1 {
 }
 
 #evaluator {
-  flex: 1;
+  flex: 1 1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -152,6 +166,7 @@ h1 {
 
 #stack-frames {
   overflow: auto;
+  padding: 10px;
 }
 
 @keyframes shake {
@@ -168,55 +183,52 @@ h1 {
 
 #heap-panel, #stack-panel, #evaluator-panel, #program-panel, #console-panel, #prompter-panel {
   position: relative;
-  padding: 10px;
+  /* padding: 10px; */
   box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
   background-color: white;
   margin: 0;
 }
 
 #prompter-panel {
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 2;
   display: flex;
   align-items: center;
   /* background-color: #E6F7FE; */
   background-color: #DAECFE;
+  padding: 10px;
 }
 
 #console-panel {
-  flex: 1;
+  flex: 1 1;
+  min-height: 200px;
   border-top-right-radius: 5px;
   background-color: #EDE8FF;
 }
 
 #stack-panel {
-  flex: 1;
+  flex: 1 1;
   background-color: rgb(85%, 85%, 85%);
-  grid-row: 3 / span 1;
-  grid-column: 2 / span 1;
   border-radius: 5px 5px 0 0;
   background-color: #FCECE6;
 }
 
 #heap-panel {
-  flex: 1;
+  flex: 1 1;
   border-radius: 5px 0 0 0;
   background-color: cornsilk;
 }
 
 #program-panel {
-  flex: 4;
-  grid-row: 2 / span 2;
-  grid-column: 1 / span 1;
+  flex: 4 4;
+  flex-basis: 0;
   border-radius: 0 5px 5px 0;
   background-color: #D4F9FC;
+  display: flex;
+  flex-direction: column;
 }
 
 #evaluator-panel {
-  flex: 1;
+  flex: 1 1;
   background-color: cyan;
-  grid-row: 2 / span 1;
-  grid-column: 2 / span 1;
   border-radius: 5px 0 0 5px;
   display: flex;
   flex-direction: column;
